--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,11 +5,13 @@
 </ion-header>
 
 <ion-content padding>
-  <h2 text-center>You are logged in!</h2>
+  <h2 text-center>Prime Reserva de Salas</h2>
 
-  <div margin-top text-center>
-    <button ion-button (click)="logOut()">
-      Log out
-    </button>
-  </div>
+  <ion-content padding>
+    <button ion-button full (click)="goToConsulta()">Consultar Salas</button>
+    <button ion-button full (click)=" goToReserva()">Reservar Sala</button>
+    <button ion-button full  (click)="logOut()">Logout</button>
+  </ion-content>
+
 </ion-content>
+
