--- a/src/pages/consulta/consulta.html
+++ b/src/pages/consulta/consulta.html
@@ -14,6 +14,18 @@
 
 
 <ion-content padding>
-  AAAA
+  <ion-card *ngFor="let objeto_feed of conteudo">
 
+    <ion-card-header>
+      {{objeto_feed.Sala}}
+    </ion-card-header>
+  
+    <ion-card-content>
+      {{objeto_feed.Inicio}} <br>
+      {{objeto_feed.Fim}} <br>
+      {{objeto_feed.Desc}} <br>
+      {{objeto_feed.User}}
+    </ion-card-content>
+  
+  </ion-card>
 </ion-content>
