--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding>
+    <ion-img id="img_logo"  src="assets/imgs/Logo.png"></ion-img>
   <h4 text-center margin-top>Login</h4>
 
   <ion-item>
