--- a/src/pages/reserva/reserva.html
+++ b/src/pages/reserva/reserva.html
@@ -26,6 +26,15 @@
       <ion-label fixed>Hora</ion-label>
       <ion-input type="time" [(ngModel)]="init" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}"></ion-input>
       <ion-input type="time" [(ngModel)]="end"></ion-input>
+      
+    </ion-item>
+
+    <ion-item>
+
+        <ion-label fixed>Descrição</ion-label>
+        <ion-input type="text" [(ngModel)]="desc"></ion-input>
+        
+
     </ion-item>
 
   
