headder login page

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Prime Reserva de Salas
+       Reserva de Salas
     </ion-title>
   </ion-navbar>
 </ion-header>
