--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,9 +8,9 @@
   <h2 text-center>Prime Reserva de Salas</h2>
 
   <ion-content padding>
-    <button ion-button full (click)="goToConsulta()">Consultar Salas</button>
-    <button ion-button full (click)=" goToReserva()">Reservar Sala</button>
-    <button ion-button full  (click)="logOut()">Logout</button>
+    <button class="bt_menu" ion-button full color="dark" (click)="goToConsulta()">Consultar Salas</button>
+    <button class="bt_menu" ion-button full color="dark" (click)=" goToReserva()">Reservar Sala</button>
+    <button class="bt_menu" ion-button full color="dark" (click)="logOut()">Logout</button>
   </ion-content>
 
 </ion-content>
