--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,8 @@
 
   <ion-content padding>
     <button class="bt_menu" ion-button full color="dark" (click)="goToConsulta()">Consultar Salas</button>
-    <button class="bt_menu" ion-button full color="dark" (click)=" goToReserva()">Reservar Sala</button>
+    <button class="bt_menu" ion-button full color="dark" (click)="goToReserva()">Reservar Sala</button>
+    <button class="bt_menu" ion-button full color="dark" (click)="goToMinhasReservas()">Minhas Reservas</button>
     <button class="bt_menu" ion-button full color="dark" (click)="logOut()">Logout</button>
   </ion-content>
 
