--- a/src/pages/sala-3/sala-3.html
+++ b/src/pages/sala-3/sala-3.html
@@ -15,6 +15,9 @@
 
 
 <ion-content padding>
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
   <ion-card *ngFor="let objeto_feed of conteudo">
 
     <ion-card-header class="header_sala">
