--- a/src/pages/consultar-salas/consultar-salas.html
+++ b/src/pages/consultar-salas/consultar-salas.html
@@ -7,8 +7,8 @@
   </ion-header>
 
 <ion-tabs>
-    <ion-tab [root]="sala_1Root" tabTitle="Sala 1" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="sala_2Root" tabTitle="Sala 2" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="sala_3Root" tabTitle="Sala 3" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="sala_4Root" tabTitle="Sala 4" tabIcon="information-circle"></ion-tab>
+    <ion-tab [root]="sala_1Root" tabTitle="Sala 1" tabIcon="eye"></ion-tab>
+    <ion-tab [root]="sala_2Root" tabTitle="Sala 2" tabIcon="eye"></ion-tab>
+    <ion-tab [root]="sala_3Root" tabTitle="Sala 3" tabIcon="eye"></ion-tab>
+    <ion-tab [root]="sala_4Root" tabTitle="Sala 4" tabIcon="eye"></ion-tab>
 </ion-tabs>
