--- a/src/pages/reserva/reserva.html
+++ b/src/pages/reserva/reserva.html
@@ -19,7 +19,7 @@
     
     <ion-item>
       <ion-label fixed>Data</ion-label>
-      <ion-input type="date" value="" [(ngModel)]="data"></ion-input>
+      <ion-input type="date" [(ngModel)]="data"></ion-input>
     </ion-item>
   
     <ion-item>
@@ -30,7 +30,7 @@
 
     <ion-item>
       <ion-label fixed>Hora de fim</ion-label>
-     <ion-input type="time" [(ngModel)]="end" ></ion-input>
+     <ion-input type="time"  [(ngModel)]="end" ></ion-input>
     
     </ion-item>
 
