--- a/src/pages/sala-4/sala-4.html
+++ b/src/pages/sala-4/sala-4.html
@@ -24,6 +24,7 @@
     </ion-card-header>
   
     <ion-card-content>
+        Data: {{objeto_feed.Data}} <br>
       Inicio: {{objeto_feed.Inicio}} <br>
       Fim: {{objeto_feed.Fim}} <br>
       Descrição: {{objeto_feed.Desc}} <br>
