--- a/src/pages/sala-2/sala-2.html
+++ b/src/pages/sala-2/sala-2.html
@@ -25,6 +25,7 @@
     </ion-card-header>
   
     <ion-card-content>
+        Data: {{objeto_feed.Data}} <br>
       Inicio: {{objeto_feed.Inicio}} <br>
       Fim: {{objeto_feed.Fim}} <br>
       Descrição: {{objeto_feed.Desc}} <br>
