--- a/src/pages/sala-4/sala-4.html
+++ b/src/pages/sala-4/sala-4.html
@@ -25,12 +25,11 @@
   
     <ion-card-content>
         Data: {{objeto_feed.Data}} <br>
-      Inicio: {{objeto_feed.Inicio}} <br>
-      Fim: {{objeto_feed.Fim}} <br>
-      Descrição: {{objeto_feed.Desc}} <br>
-      Nome: {{objeto_feed.User}} <br>
-      Ramal:{{objeto_feed.Ramal}} <br>
-    </ion-card-content>
+        Horário: {{objeto_feed.Inicio}} --<s></s> {{objeto_feed.Fim}} <br>
+        Descrição: {{objeto_feed.Desc}} <br>
+        Nome: {{objeto_feed.User}} <br>
+        Ramal: {{objeto_feed.Ramal}} <br>
+      </ion-card-content>
   
   </ion-card>
 </ion-content>
