--- a/src/pages/sala-1/sala-1.html
+++ b/src/pages/sala-1/sala-1.html
@@ -26,13 +26,12 @@
     </ion-card-header>
   
     <ion-card-content>
-      Data: {{objeto_feed.Data}} <br>
-      Inicio: {{objeto_feed.Inicio}} <br>
-      Fim: {{objeto_feed.Fim}} <br>
-      Descrição: {{objeto_feed.Desc}} <br>
-      Nome: {{objeto_feed.User}} <br>
-      Ramal:{{objeto_feed.Ramal}} <br>
-    </ion-card-content>
+        Data: {{objeto_feed.Data}} <br>
+        Horário: {{objeto_feed.Inicio}} --<s></s> {{objeto_feed.Fim}} <br>
+        Descrição: {{objeto_feed.Desc}} <br>
+        Nome: {{objeto_feed.User}} <br>
+        Ramal: {{objeto_feed.Ramal}} <br>
+      </ion-card-content>
   
   </ion-card>
 </ion-content>
